--- a/templates/Result/paciente_update.html
+++ b/templates/Result/paciente_update.html
@@ -139,56 +139,21 @@
                 <div class="col-lg-8">
                     <div class="panel tabbed-panel panel-primary">
                         <div class="panel-heading clearfix">
-                            <div class="panel-title pull-left">Tabbed Panel Primary</div>
+                            <div class="panel-title pull-left">Editar Info</div>
                             <div class="pull-right">
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-primary-1" data-toggle="tab">Quimica Sanguinia de 30</a></li>
-                                    <li><a href="#tab-primary-2" data-toggle="tab">BH</a></li>
-                                    <li><a href="#tab-primary-3" data-toggle="tab">PSA</a></li>
-                                    <li class="dropdown">
-                                        <a href="#" data-toggle="dropdown">More <span class="caret"></span></a>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#tab-primary-4" data-toggle="tab">EGO</a></li>
-                                            <li><a href="#tab-primary-5" data-toggle="tab">CPL</a></li>
-
-                                        </ul>
+                                    <li class="active"><a href="#tab-primary-1" data-toggle="tab">Info</a></li>
+                                        
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="panel-body">
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="tab-primary-1">
-
-
-                                    <table id="example" class="display nowrap" style="width:100%">
-                                        <thead>
-                                          <tr>
-                                            <!-- <th scope="col">Paciente</th> -->
-                                            <th scope="col">Prueba</th>
-                                            <th scope="col">Resultado</th>
-                                            <th scope="col">Unidad</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            {% for key, value in qs30_resultado.items %}
-                                            <tr>
-                                                <!-- <td>{{ key }}</td> -->
-                                                <td>{{ key }}</td>
-                                                <td>{{ value.0 }}</td>
-                                                <td>{{ value.1 }}</td>
-                                            </tr>
-                                            {% endfor %}
-                                      </table>
-                                </div>
-
-
-                                <div class="tab-pane fade" id="tab-primary-2">Page 2</div>
-                                <div class="tab-pane fade" id="tab-primary-3">Page 3</div>
-                                <div class="tab-pane fade" id="tab-primary-4">Page 4</div>
-                                <div class="tab-pane fade" id="tab-primary-5">Page 5</div>
-                            </div>
+                            <form method="post">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <button type="submit">Actualizar</button>
+                            </form>
                         </div>
                     </div>
                     <!-- /.panel -->
@@ -227,3 +192,4 @@
 
     </body>
 </html>
+
