--- a/templates/dash/index.html
+++ b/templates/dash/index.html
@@ -1,8 +1,6 @@
 {% load static %}
 
 <!DOCTYPE html>
-
-
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -11,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>MACC JSGN</title>
+        <title>Startmin - Bootstrap Admin Theme</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -19,14 +17,14 @@
         <!-- MetisMenu CSS -->
         <link href="{% static 'css/metisMenu.min.css' %}" rel="stylesheet">
 
-        <!-- DataTables CSS -->
-        <link href="{% static 'css/dataTables/dataTables.bootstrap.css' %}" rel="stylesheet">
-
-        <!-- DataTables Responsive CSS -->
-        <link href="{% static 'css/dataTables/dataTables.responsive.css' %}" rel="stylesheet">
+        <!-- Timeline CSS -->
+        <link href="{% static 'css/timeline.css' %}" rel="stylesheet">
 
         <!-- Custom CSS -->
         <link href="{% static 'css/startmin.css' %}" rel="stylesheet">
+
+        <!-- Morris Charts CSS -->
+        <link href="{% static 'css/morris.css' %}" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
@@ -45,7 +43,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">MACC JSGN</a>
+                    <a class="navbar-brand" href="index.html">MACC</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -129,78 +127,121 @@
                         </ul>
                     </li>
                 </ul>
+
                 <!-- /.navbar-top-links -->
+
                 {% include 'Panel/main_panel.html' %}
 
-                
-                <!-- /.navbar-static-side -->
+
             </nav>
 
             <div id="page-wrapper">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="page-header">Isla de Cedros</h1>
+                            <h1 class="page-header">Dashboard</h1>
                         </div>
                         <!-- /.col-lg-12 -->
                     </div>
                     <!-- /.row -->
                     <div class="row">
-                        <div class="col-lg-12">
-                            <div class="panel panel-default">
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-primary">
                                 <div class="panel-heading">
-                                    Pacientes
-                                </div>
-                                <!-- /.panel-heading -->
-                                <div class="panel-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                            <thead>
-                                                <tr>
-                                                    <th>Nombre</th>
-                                                    <th>Fecha de Nacimiento</th>
-                                                    <th>Ficha</th>
-                                                     
-                                                    {% if request.user.is_superuser %}
-                                                    <th>Editar Inf. Paciente</th>
-                                                    {% endif %}
-                                                    <th>Resultados</th>
-
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                {% for p in paciente %}
-                                                    <tr>
-                                                        <td>{{p.nombre_completo}}</td>
-                                                        <td>{{p.fecha_nacimiento}}</td>
-                                                        <td>{{p.ficha}}</td>
-                                                       
-                                                        {% if request.user.is_superuser %}
-                                                            <td><a href="{% url 'paciente_update' p.pk %}">Editar</a></td>
-                                                        {% endif %}
-
-                                                        <td><a href="{% url 'results' p.ficha %}">Ver</a></td>
-                                                    </tr>
-                                                {% endfor %}
-                                                
-                                            </tbody>
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-group fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">{{ pacientes_GN }}</div>
+                                            <div>No. Pacientes en Guerrero Negro</div>
+                                        </div>
                                     </div>
-                                    <!-- /.table-responsive -->
-                                    <!-- <div class="well">
-                                        <h4>DataTables Usage Information</h4>
-                                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-                                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-                                    </div> -->
                                 </div>
-                                <!-- /.panel-body -->
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">...</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
                             </div>
-                            <!-- /.panel -->
                         </div>
-                        <!-- /.col-lg-12 -->
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-green">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-group fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">{{ pacientes_IC }}</div>
+                                            <div>No. Pacientes en Isla de Cedros</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">...</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-yellow">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-group fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">{{  pacientes }}</div>
+                                            <div>Total de Pacientes</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">...</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- 
+                        <div class="col-lg-3 col-md-6">
+                            <div class="panel panel-red">
+                                <div class="panel-heading">
+                                    <div class="row">
+                                        <div class="col-xs-3">
+                                            <i class="fa fa-support fa-5x"></i>
+                                        </div>
+                                        <div class="col-xs-9 text-right">
+                                            <div class="huge">13</div>
+                                            <div>Support Tickets!</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="#">
+                                    <div class="panel-footer">
+                                        <span class="pull-left">View Details</span>
+                                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> -->
                     </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.container-fluid -->
+
+                    <!-- ######################################################################################################################### -->
+                    
             </div>
             <!-- /#page-wrapper -->
 
@@ -216,22 +257,15 @@
         <!-- Metis Menu Plugin JavaScript -->
         <script src="{% static 'js/metisMenu.min.js' %}"></script>
 
-        <!-- DataTables JavaScript -->
-        <script src="{% static 'js/dataTables/jquery.dataTables.min.js' %}"></script>
-        <script src="{% static 'js/dataTables/dataTables.bootstrap.min.js' %}"></script>
+        <!-- Morris Charts JavaScript -->
+        <script src="{% static 'js/raphael.min.js' %}"></script>
+        <script src="{% static 'js/morris.min.js' %}"></script>
+        <script src="{% static 'js/morris-data.js' %}"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="{% static 'js/startmin.js' %}"></script>
 
-        <!-- Page-Level Demo Scripts - Tables - Use for reference -->
-        <script>
-            $(document).ready(function() {
-                $('#dataTables-example').DataTable({
-                        responsive: true
-                });
-            });
-        </script>
-
     </body>
 </html>
+
 
