--- a/templates/dash/login.html
+++ b/templates/dash/login.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Startmin - Bootstrap Admin Theme</title>
+        <title>DB MACC JSGN</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -38,7 +38,7 @@
                 <div class="col-md-4 col-md-offset-4">
                     <div class="login-panel panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Por favor. Ingresa tus credenciales</h3>
+                            <h3 class="panel-title">Acceso a la Base de datos de la Jornada de la Salud</h3>
                         </div>
                         <div class="panel-body">
                             <form role="form" method="POST">
