CAMBIOS EN TABLAS

--- a/templates/Result/results.html
+++ b/templates/Result/results.html
@@ -143,7 +143,7 @@
                             <div class="pull-right">
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-primary-1" data-toggle="tab">Quimica Sanguinia de 30</a></li>
-                                    <li><a href="#tab-primary-2" data-toggle="tab">BH</a></li>
+                                    <!-- <li><a href="#tab-primary-2" data-toggle="tab">BH</a></li>
                                     <li><a href="#tab-primary-3" data-toggle="tab">PSA</a></li>
                                     <li class="dropdown">
                                         <a href="#" data-toggle="dropdown">More <span class="caret"></span></a>
@@ -152,7 +152,7 @@
                                             <li><a href="#tab-primary-5" data-toggle="tab">CPL</a></li>
 
                                         </ul>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
