--- a/templates/Result/paciente_update.html
+++ b/templates/Result/paciente_update.html
@@ -42,7 +42,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Startmin</a>
+                    <a class="navbar-brand" href="#">MACC JSGN</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -143,7 +143,7 @@
                             <div class="pull-right">
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-primary-1" data-toggle="tab">Info</a></li>
-                                        
+
                                     </li>
                                 </ul>
                             </div>
