--- a/templates/dash/index.html
+++ b/templates/dash/index.html
@@ -43,7 +43,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">MACC</a>
+                    <a class="navbar-brand" href="#">MACC JSGN</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -54,7 +54,7 @@
                 </button>
 
                 <ul class="nav navbar-nav navbar-left navbar-top-links">
-                    <li><a href="#"><i class="fa fa-home fa-fw"></i> Website</a></li>
+                    <li><a href="#"><i class="fa fa-home fa-fw"></i> MACC JSGN</a></li>
                 </ul>
 
                 <ul class="nav navbar-right navbar-top-links">
@@ -214,7 +214,7 @@
                                 </a>
                             </div>
                         </div>
-                        <!-- 
+                        <!--
                         <div class="col-lg-3 col-md-6">
                             <div class="panel panel-red">
                                 <div class="panel-heading">
@@ -241,7 +241,7 @@
                     </div>
 
                     <!-- ######################################################################################################################### -->
-                    
+
             </div>
             <!-- /#page-wrapper -->
 
