--- a/templates/Result/results.html
+++ b/templates/Result/results.html
@@ -143,7 +143,8 @@
                             <div class="pull-right">
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-primary-1" data-toggle="tab">Quimica Sanguinia de 30</a></li>
-                                    <!-- <li><a href="#tab-primary-2" data-toggle="tab">BH</a></li>
+                                    <li><a href="#tab-primary-2" data-toggle="tab">BH</a></li>
+                                    <!-- 
                                     <li><a href="#tab-primary-3" data-toggle="tab">PSA</a></li>
                                     <li class="dropdown">
                                         <a href="#" data-toggle="dropdown">More <span class="caret"></span></a>
@@ -158,6 +159,8 @@
                         </div>
                         <div class="panel-body">
                             <div class="tab-content">
+
+
                                 <div class="tab-pane active" id="tab-primary-1">
 
 
@@ -172,19 +175,44 @@
                                         </thead>
                                         <tbody>
 
-                                            {% for key, value in qs30_resultado.items %}
+                                            {% for value in qs30_resultado %}
                                             <tr>
-                                                <!-- <td>{{ key }}</td> -->
-                                                <td>{{ key }}</td>
-                                                <td>{{ value.0 }}</td>
-                                                <td>{{ value.1 }}</td>
+                                                <td>{{ value.prueba }}</td>
+                                                <td>{{ value.resultado }}</td>
+                                                <td>{{ value.unidad }}</td>
                                             </tr>
                                             {% endfor %}
                                       </table>
                                 </div>
 
 
-                                <div class="tab-pane fade" id="tab-primary-2">Page 2</div>
+                                <div class="tab-pane fade" id="tab-primary-2">
+                        
+
+                                    <table id="example" class="display nowrap" style="width:100%">
+                                            <thead>
+                                              <tr>
+                                                <!-- <th scope="col">Paciente</th> -->
+                                                <th scope="col">Prueba</th>
+                                                <th scope="col">Resultado</th>
+                                                <!-- <th scope="col">Unidad</th> -->
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+    
+                                                {% for key in bh %}
+                                                <tr>
+                                    
+                                                    <td>{{ key.prueba }}</td>
+                                                    <td>{{ key.resultado }}</td>
+                                                    <!-- <td>{{ key.unidad }}</td> -->
+                                                </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                    </table>
+                                </div>
+
+
                                 <div class="tab-pane fade" id="tab-primary-3">Page 3</div>
                                 <div class="tab-pane fade" id="tab-primary-4">Page 4</div>
                                 <div class="tab-pane fade" id="tab-primary-5">Page 5</div>
