--- a/templates/Panel/main_panel.html
+++ b/templates/Panel/main_panel.html
@@ -32,38 +32,28 @@
             <li>
                 <a href="{% url 'isladecedros' %}"><i class="fa fa-table fa-fw"></i>Isla de Cedros</a>
             </li>
+
+
             {% if request.user.is_superuser %}
+
+        
                 <li>
-                    <a href="{% url 'actualizar_info' %}"><i class="fa fa-table fa-fw"></i>Actualizar Info</a>
+                    <a href="#"><i class="fa fa-wrench fa-fw"></i> Herramientas <span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="panels-wells.html">Alta de Paciente</a>
+                        </li>
+                        <li>
+                            <a href="buttons.html">Alta de Estudio (QS30)</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'actualizar_info' %}">Actualiza Base de datos</a>
+                        </li>
+                    </ul>
                 </li>
+
+
             {% endif %}
-            <!-- <li>
-                <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
-                    <li>
-                        <a href="panels-wells.html">Panels and Wells</a>
-                    </li>
-                    <li>
-                        <a href="buttons.html">Buttons</a>
-                    </li>
-                    <li>
-                        <a href="notifications.html">Notifications</a>
-                    </li>
-                    <li>
-                        <a href="typography.html">Typography</a>
-                    </li>
-                    <li>
-                        <a href="icons.html"> Icons</a>
-                    </li>
-                    <li>
-                        <a href="grid.html">Grid</a>
-                    </li>
-                </ul>
-                 /.nav-second-level -->
-            </li>
             <!-- <li>
                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
