--- a/templates/dash/index.html
+++ b/templates/dash/index.html
@@ -258,16 +258,19 @@
                                 <td>Pacientes en Guerrero Negro</td>
                                 <td><a href ="{% url 'get_guerreo_negro' %}">Descargar</a></td>
                             </tr>
-
                             <tr>
-                                <td>Pacientes en Isla de Cedros</td>
+                                <td>Pacientes en Isla de Cedros </td>
                                 <td><a href ="{% url 'get_Islacedros' %}">Descargar</a></td>
                             </tr>
-
                             <tr>
-                                <td>Quimica Sanguinea  todos los pacientes</td>
-                                <td><a href ="{% url 'get_quimica_sanguinea_all' %}">Descargar</a></td>
+                                <td>Pacientes en Guerrero Negro Quimica Sanguinea</td>
+                                <td><a href ="{% url 'pacientes_guerrero_negro_qs30' %}">Descargar</a></td>
                             </tr>
+                            <tr>
+                                <td>Pacientes en Isla de Cedros Quimica Sanguinea</td>
+                                <td><a href ="{% url 'pacientes_Isla_Cedros_qs30' %}">Descargar</a></td>
+                            </tr>
+
                         </tbody>
                 </div>
 
