--- a/templates/dash/isladecedros.html
+++ b/templates/dash/isladecedros.html
@@ -179,7 +179,7 @@
                                                             <td><a href="{% url 'paciente_update' p.pk %}">Editar</a></td>
                                                         {% endif %}
 
-                                                        <td><a href="{% url 'results' p.ficha %}">Ver</a></td>
+                                                        <td><a href="{% url 'results' p.id %}">Ver</a></td>
                                                     </tr>
                                                 {% endfor %}
 
